# GOTAcc

./: .gitignore  CHANGELOG.md  EpicsIOC.py  LICENSE  README.md  para_setup.py  pyproject.toml  requirements.txt  runOpt.py
.cache/: gui_theme.json
.cache/matplotlib/: fontlist-v390.json
algorithms/multi_objectivce/: MOPSOOptimizer.py  NSGA2Optimizer.py
algorithms/multi_objective/: MOBOOptimizer.py
algorithms/multi_objectives/: MGGPO.py
algorithms/single_objective/: BOOptimizer.py  RCDSOptimizer.py  TuRBOOptimizer.py
configs/: hls2_single.py  irfel_multi.py  para_half.py  para_irfel.py
examples/: demo_epics_mock_single.py  demo_import_interface.py  demo_import_multi.py  demo_import_single.py  demo_multi_mobo_zdt1.py  demo_single_bo_ackley.py  demo_single_bo_sphere.py
interfaces/: EpicsIOC.py  EpicsIOC_multi.py
runners/: common.py  run_multi.py  run_multi_epics.py  run_single.py  run_single_epics.py
src/gotacc/algorithms/: __init__.py
src/gotacc/algorithms/multi_objective/: __init__.py  consmggpo.py  consmobo.py  mobo.py  mopso.py  nsga2.py
src/gotacc/algorithms/single_objective/: __init__.py  bo.py  consbo.py  rcds.py  turbo.py
src/gotacc/cli/: __init__.py  run_bo.py
src/gotacc/cli/under/: common.py  run_multi.py  run_multi_epics.py  run_single.py  run_single_epics.py
src/gotacc/configs/: loader.py  para_irfel.py  schema.py  validators.py
src/gotacc/configs/pv_lists/: hls2_pvlist.json  irfel.json  irfel_pvlist.json
src/gotacc/configs/py_cfg/: para_half.py  para_irfel.py
src/gotacc/configs/yaml_cfg/: irfel_bo.yaml  irfel_consbo.yaml  irfel_consmobo.yaml  irfel_mobo.yaml  irfel_nsga2.yaml  irfel_turbo.yaml
src/gotacc/gui/: irfel.json  main.py  state.py  task_config.yaml  theme.py
src/gotacc/gui/services/: pv_library.py  task_service.py  template_library.py
src/gotacc/gui/ui/: README.txt  dialog_algorithm_detail.ui  dialog_bounds_tools.ui  dialog_policy_editor.ui  dialog_pv_library_selector.ui  dialog_pv_monitor.ui  main_window.ui  page_machine.ui  page_run_monitor.ui  page_task_builder.ui
src/gotacc/gui/views/: main_window.py  run_session.py  run_session_host.py  tool_dialogs.py  ui_dialog_algorithm_detail.py  ui_dialog_bounds_tools.py  ui_dialog_policy_editor.py  ui_dialog_pv_library_selector.py  ui_dialog_pv_monitor.py  ui_machine.py  ui_main_window.py  ui_run_monitor.py  ui_task_builder.py  view_adapter.py
src/gotacc/gui/views/controllers/: __init__.py  machine_controller.py  results_controller.py  run_completion_presenter.py  run_controller.py  run_preparation_presenter.py  run_results_presenter.py  run_session_presenter.py  runtime_status_controller.py  task_builder_controller.py  templates_controller.py
src/gotacc/gui/workers/: engine_worker.py
src/gotacc/interfaces/: EpicsIOC.py  EpicsIOC_multi_xiaosesan.py  EpicsIOC_single_felenergy.py  __init__.py  base.py  epics.py  epics_new.py  factory.py  test_function_single.py
src/gotacc/runners/: optimize.py  run_cli.py  run_debug.py
tests/: test_function_single.py  test_imports.py  test_runner_imports.py  testfunction_alg.py
