[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gotacc"
version = "0.2.0a1"
description = "General Optimization Toolkit for Accelerator Applications"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Haoran Zhang" }
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "torch",
  "gpytorch",
  "botorch",
  "pyepics",
]

[project.urls]
Homepage = "https://github.com/ustc-zhr/GOTAcc"
Repository = "https://github.com/ustc-zhr/GOTAcc"
Issues = "https://github.com/ustc-zhr/GOTAcc/issues"

[project.scripts]
gotacc-run-legacy = "gotacc.cli.run_legacy:main"
gotacc-run-single = "gotacc.cli.run_single:main"
gotacc-run-multi = "gotacc.cli.run_multi:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gotacc*"]